# KSEIndexViewer

./: .gitignore  README.md  package-lock.json  package.json
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  portfolio.rs  scraper_service.rs  settings.rs  stocks.rs  tray.rs
web/: README.md  package-lock.json  package.json  wrangler.toml
web/functions/api/: _psx.js  indices.js  market-watch.js  symbols.js
web/functions/api/stock/: [symbol].js
web/public/: index.html  manifest.webmanifest  sw.js
web/public/css/: app.css
web/public/js/: api.js  app.js  format.js  store.js
web/public/js/pages/: indices.js  market.js  portfolio.js  settings.js  stock.js
