[package]
name = "kse-index-viewer"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.22"
dirs = "6"
tauri-plugin-autostart = "2"
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"
tokio = { version = "1", features = ["full"] }
